java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unnamedClass/WithPackageStatement.java
<error descr="Unnamed class contains no 'main' method"><error descr="Package statement is not allowed for unnamed class">package pack.bar;</error>

void foo() {

}</error>